# TDP1-TPF

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_prod.sh  install.sh  quamtumChess_1.0-1.deb  quamtumChess_2.0.1.deb  quamtumChess_2.0.2.deb  quamtumChess_2.0.3.deb
client/: Action.h  Button.cpp  Button.h  ButtonTEMP.cpp  ButtonTEMP.h  ChatUI.cpp  ChatUI.h  Chat_CL.cpp  Chat_CL.h  ClickableEntity.cpp  ClickableEntity.h  Client.cpp  Client.h  ConfigScene.cpp  ConfigScene.h  Drawable.h  Entity.cpp  Entity.h  EventManager.cpp  EventManager.h  GameLobby.cpp  GameLobby.h  GameScene.cpp  GameScene.h  LobbyScene.cpp  LobbyScene.h  Login.cpp  Login.h  LoginScene.cpp  LoginScene.h  MainGameScreen.cpp  MainGameScreen.h  RecvThread.cpp  RecvThread.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Screen.cpp  Screen.h  (+8 more)
common/: BlockingQueue.h  Chat.cpp  Chat.h  ChatMessage.cpp  ChatMessage.h  ChessBoard.h  Message.cpp  Message.h  MoveMessage.cpp  MoveMessage.h  Protocol.cpp  Protocol.h  SelectMessage.cpp  SelectMessage.h  Socket.cpp  Socket.h  StageMode.cpp  StageMode.h  Thread.cpp  Thread.h
common/chess_game/: Board.cpp  Board.h  Piece.cpp  Piece.h  PieceSplits.cpp  PieceSplits.h  Position.cpp  Position.h
common/chess_game/notation/: MeasurementNotation.h  MergeNotation.cpp  MergeNotation.h  MesurementNotation.cpp  MoveNotation.h  NormalNotation.cpp  NormalNotation.h  SplitNotation.cpp  SplitNotation.h
common/chess_game/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
common/messages/: ChatMessage.cpp  ChatMessage.h  MergeMoveMessage.cpp  MergeMoveMessage.h  Message.cpp  Message.h  MoveMessage.cpp  MoveMessage.h  NormalMoveMessage.cpp  NormalMoveMessage.h  PlayerIdMessage.cpp  PlayerIdMessage.h  PlayerInfoMessage.cpp  PlayerInfoMessage.h  PlayerNameMessage.cpp  PlayerNameMessage.h  PlayerTypeMessage.cpp  PlayerTypeMessage.h  RoomIdMessage.cpp  RoomIdMessage.h  SeedMessage.cpp  SeedMessage.h  SelectMessage.cpp  SelectMessage.h  SplitMoveMessage.cpp  SplitMoveMessage.h  VariableLenghtMessage.cpp  VariableLenghtMessage.h
common/movements/: MergeMove.cpp  MergeMove.h  MovementCommand.cpp  MovementCommand.h  NormalMove.cpp  NormalMove.h  SplitMove.cpp  SplitMove.h
docs/: _config.yml  index.md
quamtumChess_2.0.1/usr/share/applications/: quantumchess.desktop
quamtumChess_2.0.2/DEBIAN/: control
quamtumChess_2.0.3/usr/local/share/assets/sprites/: chess-game.txt
server/: Chat_SV.cpp  Chat_SV.h  ClientProxy.cpp  ClientProxy.h  Player.cpp  Player.h  ProtectedString.cpp  ProtectedString.h  RecvThread.cpp  RecvThread.h  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  SendThread.cpp  SendThread.h  Server.cpp  Server.h  Thread.cpp  client.h  room.cpp  room.h  room_manager.h  server_main.cpp
tests/: BoardTests.cpp  PieceTests.cpp  PositionTests.cpp  QueueTests.cpp  SocketTests.cpp  Tests.cpp
tests/doctest/: doctest.h
